Streaming in storage layer